src/gramatica/Portugolv3Parser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g 2011-10-05 11:36:39

package Gramatica;
import java.util.HashMap;
import java.util.Iterator;
import java.util.ArrayList;
import java.util.List;
import java.util.StringTokenizer;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class Portugolv3Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ENTAO", "SENAO", "SE", "COMANDOS", "VARIAVEIS", "FUNCOES", "LISTAPARAMETROS", "TIPORETORNO", "CORPOFUNCAO", "LEIA", "FIM", "IMPRIMA", "ENQUANTO", "PASSO", "CONDICAO", "ATRIBUICAO", "PARA", "CHAMADAFUNCAO", "COMMENT", "ID", "INT", "STRING", "WS", "ESC_SEQ", "HEX_DIGIT", "OCTAL_ESC", "UNICODE_ESC", "'PROGRAMA'", "';'", "'.'", "'INTEIRO'", "'STRING'", "'BOOLEANO'", "'VOID'", "','", "'FUNCAO'", "'('", "')'", "':'", "'SAIR'", "'='", "'ATE'", "'||'", "'&&'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", "'!'", "'^'", "'true'", "'false'"
    };
    public static final int EOF=-1;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int ENTAO=4;
    public static final int SENAO=5;
    public static final int SE=6;
    public static final int COMANDOS=7;
    public static final int VARIAVEIS=8;
    public static final int FUNCOES=9;
    public static final int LISTAPARAMETROS=10;
    public static final int TIPORETORNO=11;
    public static final int CORPOFUNCAO=12;
    public static final int LEIA=13;
    public static final int FIM=14;
    public static final int IMPRIMA=15;
    public static final int ENQUANTO=16;
    public static final int PASSO=17;
    public static final int CONDICAO=18;
    public static final int ATRIBUICAO=19;
    public static final int PARA=20;
    public static final int CHAMADAFUNCAO=21;
    public static final int COMMENT=22;
    public static final int ID=23;
    public static final int INT=24;
    public static final int STRING=25;
    public static final int WS=26;
    public static final int ESC_SEQ=27;
    public static final int HEX_DIGIT=28;
    public static final int OCTAL_ESC=29;
    public static final int UNICODE_ESC=30;

    // delegates
    // delegators


        public Portugolv3Parser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public Portugolv3Parser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return Portugolv3Parser.tokenNames; }
    public String getGrammarFileName() { return "/Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g"; }


    //Tabela de simbolos
    public HashMap<String,Simbolo> tabelaSimbolos = new HashMap<String,Simbolo>();



    public static class prog_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "prog"
    // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:56:1: prog : ( COMMENT )* 'PROGRAMA' nomePrograma= ID ';' ( declVars )* ( declFuncoes )* ( comandos )* 'FIM' '.' -> ^( $nomePrograma ^( 'VARIAVEIS' ( declVars )* ) ^( 'FUNCOES' ( declFuncoes )* ) ^( 'COMANDOS' ( comandos )* ) ) ;
    public final Portugolv3Parser.prog_return prog() throws RecognitionException {
        Portugolv3Parser.prog_return retval = new Portugolv3Parser.prog_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token nomePrograma=null;
        Token COMMENT1=null;
        Token string_literal2=null;
        Token char_literal3=null;
        Token string_literal7=null;
        Token char_literal8=null;
        Portugolv3Parser.declVars_return declVars4 = null;

        Portugolv3Parser.declFuncoes_return declFuncoes5 = null;

        Portugolv3Parser.comandos_return comandos6 = null;


        CommonTree nomePrograma_tree=null;
        CommonTree COMMENT1_tree=null;
        CommonTree string_literal2_tree=null;
        CommonTree char_literal3_tree=null;
        CommonTree string_literal7_tree=null;
        CommonTree char_literal8_tree=null;
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleTokenStream stream_COMMENT=new RewriteRuleTokenStream(adaptor,"token COMMENT");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
        RewriteRuleTokenStream stream_FIM=new RewriteRuleTokenStream(adaptor,"token FIM");
        RewriteRuleSubtreeStream stream_comandos=new RewriteRuleSubtreeStream(adaptor,"rule comandos");
        RewriteRuleSubtreeStream stream_declFuncoes=new RewriteRuleSubtreeStream(adaptor,"rule declFuncoes");
        RewriteRuleSubtreeStream stream_declVars=new RewriteRuleSubtreeStream(adaptor,"rule declVars");
        try {
            // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:56:6: ( ( COMMENT )* 'PROGRAMA' nomePrograma= ID ';' ( declVars )* ( declFuncoes )* ( comandos )* 'FIM' '.' -> ^( $nomePrograma ^( 'VARIAVEIS' ( declVars )* ) ^( 'FUNCOES' ( declFuncoes )* ) ^( 'COMANDOS' ( comandos )* ) ) )
            // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:56:8: ( COMMENT )* 'PROGRAMA' nomePrograma= ID ';' ( declVars )* ( declFuncoes )* ( comandos )* 'FIM' '.'
            {
            // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:56:8: ( COMMENT )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==COMMENT) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:56:8: COMMENT
            	    {
            	    COMMENT1=(Token)match(input,COMMENT,FOLLOW_COMMENT_in_prog153);  
            	    stream_COMMENT.add(COMMENT1);


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            string_literal2=(Token)match(input,31,FOLLOW_31_in_prog156);  
            stream_31.add(string_literal2);

            nomePrograma=(Token)match(input,ID,FOLLOW_ID_in_prog160);  
            stream_ID.add(nomePrograma);

            char_literal3=(Token)match(input,32,FOLLOW_32_in_prog162);  
            stream_32.add(char_literal3);

            // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:56:48: ( declVars )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=34 && LA2_0<=37)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:56:48: declVars
            	    {
            	    pushFollow(FOLLOW_declVars_in_prog164);
            	    declVars4=declVars();

            	    state._fsp--;

            	    stream_declVars.add(declVars4.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:56:58: ( declFuncoes )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==39) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:56:58: declFuncoes
            	    {
            	    pushFollow(FOLLOW_declFuncoes_in_prog167);
            	    declFuncoes5=declFuncoes();

            	    state._fsp--;

            	    stream_declFuncoes.add(declFuncoes5.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:56:71: ( comandos )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==SE||LA4_0==LEIA||(LA4_0>=IMPRIMA && LA4_0<=ENQUANTO)||LA4_0==PARA||LA4_0==ID||LA4_0==43) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:56:71: comandos
            	    {
            	    pushFollow(FOLLOW_comandos_in_prog170);
            	    comandos6=comandos();

            	    state._fsp--;

            	    stream_comandos.add(comandos6.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            string_literal7=(Token)match(input,FIM,FOLLOW_FIM_in_prog173);  
            stream_FIM.add(string_literal7);

            char_literal8=(Token)match(input,33,FOLLOW_33_in_prog175);  
            stream_33.add(char_literal8);



            // AST REWRITE
            // elements: COMANDOS, VARIAVEIS, FUNCOES, nomePrograma, declFuncoes, declVars, comandos
            // token labels: nomePrograma
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleTokenStream stream_nomePrograma=new RewriteRuleTokenStream(adaptor,"token nomePrograma",nomePrograma);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 56:91: -> ^( $nomePrograma ^( 'VARIAVEIS' ( declVars )* ) ^( 'FUNCOES' ( declFuncoes )* ) ^( 'COMANDOS' ( comandos )* ) )
            {
                // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:56:94: ^( $nomePrograma ^( 'VARIAVEIS' ( declVars )* ) ^( 'FUNCOES' ( declFuncoes )* ) ^( 'COMANDOS' ( comandos )* ) )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_nomePrograma.nextNode(), root_1);

                // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:56:110: ^( 'VARIAVEIS' ( declVars )* )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(VARIAVEIS, "VARIAVEIS"), root_2);

                // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:56:124: ( declVars )*
                while ( stream_declVars.hasNext() ) {
                    adaptor.addChild(root_2, stream_declVars.nextTree());

                }
                stream_declVars.reset();

                adaptor.addChild(root_1, root_2);
                }
                // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:56:135: ^( 'FUNCOES' ( declFuncoes )* )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(FUNCOES, "FUNCOES"), root_2);

                // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:56:147: ( declFuncoes )*
                while ( stream_declFuncoes.hasNext() ) {
                    adaptor.addChild(root_2, stream_declFuncoes.nextTree());

                }
                stream_declFuncoes.reset();

                adaptor.addChild(root_1, root_2);
                }
                // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:56:161: ^( 'COMANDOS' ( comandos )* )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(COMANDOS, "COMANDOS"), root_2);

                // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:56:174: ( comandos )*
                while ( stream_comandos.hasNext() ) {
                    adaptor.addChild(root_2, stream_comandos.nextTree());

                }
                stream_comandos.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "prog"

    public static class declVars_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "declVars"
    // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:59:1: declVars : a= tipo listaIDs= listaIds ';' -> ^( tipo listaIds ) ;
    public final Portugolv3Parser.declVars_return declVars() throws RecognitionException {
        Portugolv3Parser.declVars_return retval = new Portugolv3Parser.declVars_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal9=null;
        Portugolv3Parser.tipo_return a = null;

        Portugolv3Parser.listaIds_return listaIDs = null;


        CommonTree char_literal9_tree=null;
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleSubtreeStream stream_listaIds=new RewriteRuleSubtreeStream(adaptor,"rule listaIds");
        RewriteRuleSubtreeStream stream_tipo=new RewriteRuleSubtreeStream(adaptor,"rule tipo");
        try {
            // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:74:2: (a= tipo listaIDs= listaIds ';' -> ^( tipo listaIds ) )
            // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:74:4: a= tipo listaIDs= listaIds ';'
            {
            pushFollow(FOLLOW_tipo_in_declVars225);
            a=tipo();

            state._fsp--;

            stream_tipo.add(a.getTree());
            pushFollow(FOLLOW_listaIds_in_declVars229);
            listaIDs=listaIds();

            state._fsp--;

            stream_listaIds.add(listaIDs.getTree());
            char_literal9=(Token)match(input,32,FOLLOW_32_in_declVars230);  
            stream_32.add(char_literal9);



            // AST REWRITE
            // elements: listaIds, tipo
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 74:32: -> ^( tipo listaIds )
            {
                // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:74:35: ^( tipo listaIds )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_tipo.nextNode(), root_1);

                adaptor.addChild(root_1, stream_listaIds.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);


            	//System.out.println((a!=null?input.toString(a.start,a.stop):null));
            	StringTokenizer st = new StringTokenizer((listaIDs!=null?input.toString(listaIDs.start,listaIDs.stop):null));
            	while(st.hasMoreElements()) {
            		//Simbolo(tipo, nome);
            		String nome = st.nextToken(",");
            		Simbolo simbolo = new Simbolo((a!=null?a.numeroTipo:0), nome);
            		tabelaSimbolos.put(nome, simbolo);
            		System.out.println("Adicionando a tabela de simbolos: "+(a!=null?input.toString(a.start,a.stop):null)+" - "+nome);
            		
            	
            	}

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "declVars"

    public static class tipo_return extends ParserRuleReturnScope {
        public int numeroTipo;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "tipo"
    // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:78:1: tipo returns [int numeroTipo] : ( 'INTEIRO' | 'STRING' | 'BOOLEANO' | 'VOID' );
    public final Portugolv3Parser.tipo_return tipo() throws RecognitionException {
        Portugolv3Parser.tipo_return retval = new Portugolv3Parser.tipo_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal10=null;
        Token string_literal11=null;
        Token string_literal12=null;
        Token string_literal13=null;

        CommonTree string_literal10_tree=null;
        CommonTree string_literal11_tree=null;
        CommonTree string_literal12_tree=null;
        CommonTree string_literal13_tree=null;

        try {
            // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:79:2: ( 'INTEIRO' | 'STRING' | 'BOOLEANO' | 'VOID' )
            int alt5=4;
            switch ( input.LA(1) ) {
            case 34:
                {
                alt5=1;
                }
                break;
            case 35:
                {
                alt5=2;
                }
                break;
            case 36:
                {
                alt5=3;
                }
                break;
            case 37:
                {
                alt5=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }

            switch (alt5) {
                case 1 :
                    // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:79:3: 'INTEIRO'
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    string_literal10=(Token)match(input,34,FOLLOW_34_in_tipo253); 
                    string_literal10_tree = (CommonTree)adaptor.create(string_literal10);
                    adaptor.addChild(root_0, string_literal10_tree);

                    retval.numeroTipo = 0;

                    }
                    break;
                case 2 :
                    // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:80:3: 'STRING'
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    string_literal11=(Token)match(input,35,FOLLOW_35_in_tipo260); 
                    string_literal11_tree = (CommonTree)adaptor.create(string_literal11);
                    adaptor.addChild(root_0, string_literal11_tree);

                    retval.numeroTipo = 1;

                    }
                    break;
                case 3 :
                    // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:81:3: 'BOOLEANO'
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    string_literal12=(Token)match(input,36,FOLLOW_36_in_tipo267); 
                    string_literal12_tree = (CommonTree)adaptor.create(string_literal12);
                    adaptor.addChild(root_0, string_literal12_tree);

                    retval.numeroTipo = 2;

                    }
                    break;
                case 4 :
                    // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:82:3: 'VOID'
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    string_literal13=(Token)match(input,37,FOLLOW_37_in_tipo273); 
                    string_literal13_tree = (CommonTree)adaptor.create(string_literal13);
                    adaptor.addChild(root_0, string_literal13_tree);

                    retval.numeroTipo = 3;

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "tipo"

    public static class listaIds_return extends ParserRuleReturnScope {
        public List<String> lista;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "listaIds"
    // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:86:1: listaIds returns [List<String> lista] : (ids+= ID ) ( ',' ids+= ID )* -> ( ID )+ ;
    public final Portugolv3Parser.listaIds_return listaIds() throws RecognitionException {
        Portugolv3Parser.listaIds_return retval = new Portugolv3Parser.listaIds_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal14=null;
        Token ids=null;
        List list_ids=null;

        CommonTree char_literal14_tree=null;
        CommonTree ids_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");

        try {
            // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:87:2: ( (ids+= ID ) ( ',' ids+= ID )* -> ( ID )+ )
            // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:87:3: (ids+= ID ) ( ',' ids+= ID )*
            {
            // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:87:3: (ids+= ID )
            // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:87:4: ids+= ID
            {
            ids=(Token)match(input,ID,FOLLOW_ID_in_listaIds303);  
            stream_ID.add(ids);

            if (list_ids==null) list_ids=new ArrayList();
            list_ids.add(ids);


            }

            // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:87:13: ( ',' ids+= ID )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==38) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /Users/lailson/Documents/UFPI/Compilador/gramatica/Portugolv3.g:87:14: ',' ids+= ID
            	    {
            	    char_literal14=(Token)match(input,38,FOLLOW_38_in_listaIds307);  
            	    stream_38.add(char_literal14);

            	    ids=(Token)match(input,ID,FOLLOW_ID_in_listaIds311);  
            	    stream_ID.add(ids);

            	    if (list_ids==null) list_ids=new ArrayList();
            	    list_ids.add(ids);


            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            retval.lista = list_ids;


            // AST REWRITE
            // elements: ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 87:45: -> ( ID )+
            {
                if ( !(stream_ID.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_ID.hasNext() ) {
                    adaptor.addChild(root_0, stream_ID.nextNode());

                }
                stream_ID.reset();

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "listaIds"

    public static class declFuncoes_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };
